fix #3899 by setting a default width and corresponding offset using negative left margin to center the element. these changes are still override on mobile mode to be full width (#3900)

--- a/src/sass/notification.scss
+++ b/src/sass/notification.scss
@@ -7,6 +7,11 @@ body .cg-notify-message {
     padding: .75rem 1.25rem;
     z-index: 9999999 !important;
     font-size: 110%;
+    width: 50%;
+    margin-left: -25%;
+    a.pull-right {
+        cursor: pointer;
+    }
     &.notification-success {
         background-color: $green;
     }
